# cpp-mapdata-parser

./: .gitmodules  CMakeLists.txt  README.md
data/: example.txt
source/: FTileJsonData.h  FTileMapData.cpp  FTileMapData.h  JsonParserUtils.h  LatLong.cpp  LatLong.h  MapDataUtils.cpp  MapDataUtils.h  MapJsonUtils.cpp  MapJsonUtils.h  OsmParserUtils.cpp  OsmParserUtils.h  ShapeUtils.cpp  ShapeUtils.h  TileBuildingDataUtils.cpp  TileBuildingDataUtils.hpp  TileUtils.cpp  TileUtils.h  main.cpp  tinyxml2.cpp  type_defines.h
